deployment-spark-history.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '10'
  resourceVersion: '307179289'
  name: spark-history
  uid: 402edab2-5928-4c09-8f84-f147d37a09a4
  creationTimestamp: '2024-05-31T17:52:35Z'
  generation: 20
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2024-06-02T02:08:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/part-of': {}
            'f:component': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.openshift.io/restartedAt': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:component': {}
            'f:spec':
              'f:containers':
                'k:{"name":"spark-history"}':
                  'f:image': {}
                  'f:volumeMounts':
                    .: {}
                    'k:{"mountPath":"/opt/spark/conf"}':
                      .: {}
                      'f:mountPath': {}
                      'f:name': {}
                    'k:{"mountPath":"/tmp/spark-events"}':
                      .: {}
                      'f:mountPath': {}
                      'f:name': {}
                  'f:terminationMessagePolicy': {}
                  .: {}
                  'f:resources': {}
                  'f:env':
                    .: {}
                    'k:{"name":"AWS_ACCESS_KEY_ID"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"AWS_REGION"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"AWS_SECRET_ACCESS_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"SPARK_MODE"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                  'f:terminationMessagePath': {}
                  'f:imagePullPolicy': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":18081,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:name': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
              'f:volumes':
                .: {}
                'k:{"name":"eventlog"}':
                  .: {}
                  'f:emptyDir': {}
                  'f:name': {}
                'k:{"name":"spark-config"}':
                  .: {}
                  'f:configMap':
                    .: {}
                    'f:defaultMode': {}
                    'f:name': {}
                  'f:name': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-11-25T21:01:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: spark-datamesh-demo
  labels:
    app: spark
    app.kubernetes.io/part-of: spark-cluster
    component: history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      component: history
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spark
        component: history
      annotations:
        openshift.openshift.io/restartedAt: '2024-05-31T22:38:29.623Z'
    spec:
      volumes:
        - name: spark-config
          configMap:
            name: spark-default-config
            defaultMode: 420
        - name: eventlog
          emptyDir: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: spark-history
          ports:
            - containerPort: 18081
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: spark-config
              mountPath: /opt/spark/conf
            - name: eventlog
              mountPath: /tmp/spark-events
          terminationMessagePolicy: File
          image: 'quay.io/osclimate/datamesh-pyspark:1.6'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 20
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-05-31T22:38:32Z'
      lastTransitionTime: '2024-05-31T17:52:35Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "spark-history-6ccfcf5798" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-11-25T21:01:43Z'
      lastTransitionTime: '2024-11-25T21:01:43Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
